	PR target/49780 	* config/i386/predicates.md (no_seg_addres_operand): No more special. 	* config/i386/i386.c (ix86_decompose_address): Allow only subregs 	of DImode hard registers in base. 	(ix86_legitimate_address_p): Allow SImode and DImode base and index 	registers.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@176506 138bc75d-0d04-0410-961f-82ee72b054a4